--- a/src/App.scss
+++ b/src/App.scss
@@ -38,7 +38,7 @@ header {
 	-webkit-background-size: cover;
 	text-align: center;
 	overflow: hidden;
-	background-color: #e9d5a1;
+	background-color: #DEEFE7;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -156,7 +156,7 @@ header h1 {
 }
 
 .foto div:after {
-	color: #333;
+	color: #002333;
 	font-size: 25px;
 	content: attr(title);
 	position: relative;
@@ -178,7 +178,7 @@ header h1 {
 	font: 18px/24px 'opensans-bold', sans-serif;
 	text-transform: uppercase;
 	letter-spacing: 3px;
-	color: black;
+	color: #002333;
 	text-align: center;
 }
 
@@ -257,7 +257,7 @@ header h1 {
 	padding: 5px 8px 5px 8px !important;
 	vertical-align: baseline;
 	background-color: #f9f5e9 !important;
-	color: black;
+	color: #002333;
 	font-weight: lighter !important;
 	font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
@@ -349,7 +349,7 @@ header h1 {
 }
 
 .loader-bar-color {
-	color: black !important;
+	color: #002333 !important;
 }
 
 #portfolio {
@@ -389,7 +389,7 @@ header h1 {
 }
 
 #skills {
-	background: #1F1F1F;
+	background: #002333;
 	min-height: 200px;
 	width: 100%;
 	overflow: hidden;
